--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ images/joistsSecond.png
 images/plumbingMain.png
 images/plumbingSecond.png
 images/RTUs.png
+images/electricalMain.png
+images/electricalSecond.png
